# dirhamly

./: Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  dirhamly.db  rustfmt.toml
data/: dummy.txt
src/: commands.rs  db.rs  main.rs  models.rs  utils.rs
templates/: monthly_report.typ
