[package]
name = "dirhamly"
version = "0.1.0"
edition = "2024"
publish = true
authors = ["Abdogouhmad <gouhmada@gmail.com>"]
description = "A fast CLI tool for personal finace tracker"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/dirhamly"
homepage = "https://github.com/yourusername/dirhamly"
documentation = "https://docs.rs/dirhamly"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }

# ─────────────────────────────
# Development Profile
# ─────────────────────────────
[profile.dev]
opt-level = 0
debug = true
incremental = true

# ─────────────────────────────
# Release Profile (Optimized)
# ─────────────────────────────
[profile.release]
opt-level = "z"        # Optimize for size
lto = "thin"           # Good optimization without super slow compile
codegen-units = 1      # Better optimization
panic = "abort"        # Smaller binary
strip = true           # Remove debug symbols
incremental = false
